[gd_scene load_steps=43 format=3 uid="uid://bmin8jl4ji6iv"]

[ext_resource type="Script" path="res://Player.gd" id="1_6qtnx"]
[ext_resource type="AudioStream" uid="uid://btmxryfob1fg0" path="res://Sunny-land-files/12_Player_Movement_SFX/61_Hit_03.wav" id="2_6fy74"]
[ext_resource type="Texture2D" uid="uid://giuocebl3k1k" path="res://Sunny-land-files/Graphical Assets/spritesheets/player.png" id="2_opci6"]
[ext_resource type="AudioStream" uid="uid://cx6yb1eekc7y1" path="res://Sunny-land-files/12_Player_Movement_SFX/08_Step_rock_02.wav" id="3_gdg2d"]
[ext_resource type="AudioStream" uid="uid://dok617efsjtmb" path="res://Sunny-land-files/12_Player_Movement_SFX/03_Step_grass_03.wav" id="3_laasd"]
[ext_resource type="Script" path="res://JumpComponent.gd" id="4_gukvo"]
[ext_resource type="AudioStream" uid="uid://gn75sv2x16ep" path="res://Sunny-land-files/8_Buffs_Heals_SFX/21_Debuff_01.wav" id="4_u1b4q"]
[ext_resource type="Script" path="res://Control.gd" id="8_2s5ur"]
[ext_resource type="Script" path="res://CharacterStates/CharacterStateMachine.gd" id="8_83iwg"]
[ext_resource type="Texture2D" uid="uid://disbwkhp2j8ug" path="res://Sunny-land-files/Graphical Assets/environment/Props/crate.png" id="8_bjctr"]
[ext_resource type="Texture2D" uid="uid://b3jncwsc2chip" path="res://Sunny-land-files/Graphical Assets/sprites/player/jump/player-jump-2.png" id="8_p4gqy"]
[ext_resource type="Script" path="res://MessageLabel.gd" id="9_flgqm"]
[ext_resource type="Script" path="res://CharacterStates/PlayerGroundState.gd" id="9_wfcsp"]
[ext_resource type="Script" path="res://CharacterStates/PlayerAirState.gd" id="10_3vlpb"]
[ext_resource type="Script" path="res://UI/StateDebugLabel.gd" id="11_m1vsv"]
[ext_resource type="Script" path="res://CharacterStates/DeathState.gd" id="11_tgcha"]
[ext_resource type="AudioStream" uid="uid://bj6fdeynoxa0i" path="res://Sunny-land-files/Custom/hitHurt.wav" id="17_e6ydq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wv0ru"]
radius = 7.0
height = 23.0

[sub_resource type="Animation" id="Animation_xvx6m"]
resource_name = "Attack"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_opci6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("PlayerSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [19, 20]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerSprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_cgppq"]
resource_name = "Death"
length = 3.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_opci6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("PlayerSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 24, 25]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerSprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, -25)]
}

[sub_resource type="Animation" id="Animation_js5y2"]
resource_name = "Fall"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_opci6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("PlayerSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [31]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerSprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_0fo2f"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_opci6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("PlayerSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerSprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_tdynk"]
resource_name = "Jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_opci6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("PlayerSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerSprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_8attm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_p4gqy")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="Animation" id="Animation_p6rlf"]
resource_name = "Run"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_opci6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("PlayerSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerSprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dh5bq"]
_data = {
"Attack": SubResource("Animation_xvx6m"),
"Death": SubResource("Animation_cgppq"),
"Fall": SubResource("Animation_js5y2"),
"Idle": SubResource("Animation_0fo2f"),
"Jump": SubResource("Animation_tdynk"),
"RESET": SubResource("Animation_8attm"),
"Run": SubResource("Animation_p6rlf")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rgiak"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tiyw7"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e057d"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xof7n"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_exkjo"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c2an3"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eyqkf"]
animation = &"Fall"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1xajj"]
blend_point_0/node = SubResource("AnimationNodeAnimation_e057d")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_xof7n")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_exkjo")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_c2an3")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_eyqkf")
blend_point_4/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d7tdl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0misl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wyvy6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b8nly"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jfev1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wfeoj"]
states/Attack/node = SubResource("AnimationNodeAnimation_rgiak")
states/Attack/position = Vector2(292, 250)
states/Death/node = SubResource("AnimationNodeAnimation_tiyw7")
states/Death/position = Vector2(513, 143)
states/End/position = Vector2(885, 143)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_1xajj")
states/Move/position = Vector2(292, 143)
states/Start/position = Vector2(52, 143)
transitions = ["Death", "End", SubResource("AnimationNodeStateMachineTransition_d7tdl"), "Move", "Attack", SubResource("AnimationNodeStateMachineTransition_0misl"), "Attack", "Move", SubResource("AnimationNodeStateMachineTransition_wyvy6"), "Move", "Death", SubResource("AnimationNodeStateMachineTransition_b8nly"), "Start", "Move", SubResource("AnimationNodeStateMachineTransition_jfev1")]
graph_offset = Vector2(-163, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5s4n5"]
size = Vector2(18, 2.25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gp71e"]
texture = ExtResource("8_bjctr")

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animation_tree", "sprite_2d", "death_sound", "mob_jump_sound", "walk_sound", "jump_sound", "hurt_sound")]
collision_mask = 14
floor_snap_length = 8.0
script = ExtResource("1_6qtnx")
animation_tree = NodePath("PlayerAnimationTree")
sprite_2d = NodePath("PlayerSprite")
death_sound = NodePath("SFX/player_death")
mob_jump_sound = NodePath("SFX/player_mob_jump")
walk_sound = NodePath("SFX/player_walk")
jump_sound = NodePath("SFX/player_jump")
hurt_sound = NodePath("SFX/player_hurt")

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("CapsuleShape2D_wv0ru")

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(1.8, 1.8)
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("8_p4gqy")
hframes = 6
vframes = 6
frame = 19

[node name="PlayerAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dh5bq")
}

[node name="PlayerAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_wfeoj")
anim_player = NodePath("../PlayerAnimationPlayer")
parameters/Move/blend_position = Vector2(0, 0)

[node name="JumpComponent" type="Node" parent="."]
script = ExtResource("4_gukvo")

[node name="MobJumpCollision" type="Area2D" parent="."]
collision_mask = 10

[node name="MobCollisionShape" type="CollisionShape2D" parent="MobJumpCollision"]
position = Vector2(-1, 17.125)
shape = SubResource("RectangleShape2D_5s4n5")

[node name="GroundStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree")]
script = ExtResource("8_83iwg")
character = NodePath("..")
animation_tree = NodePath("../PlayerAnimationTree")

[node name="Ground" type="Node" parent="GroundStateMachine"]
script = ExtResource("9_wfcsp")

[node name="Air" type="Node" parent="GroundStateMachine"]
script = ExtResource("10_3vlpb")

[node name="ActionStateMachine" type="Node" parent="."]
script = ExtResource("8_83iwg")

[node name="Death" type="Node" parent="ActionStateMachine"]
script = ExtResource("11_tgcha")
death_animation = "Death"
can_move = false
has_gravity = false

[node name="Control" type="Control" parent="." node_paths=PackedStringArray("despawn_timer")]
layout_mode = 3
anchors_preset = 0
offset_left = -41.0
offset_top = -46.0
offset_right = -1.0
offset_bottom = -6.0
script = ExtResource("8_2s5ur")
despawn_timer = NodePath("Timer")

[node name="MessageLabel" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -51.0
offset_right = 70.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/normal_font_size = 12
theme_override_styles/normal = SubResource("StyleBoxTexture_gp71e")
bbcode_enabled = true
text = "[center] You can now Double Jump!!"
fit_content = true
script = ExtResource("9_flgqm")

[node name="StateDebugLabel" type="Label" parent="Control" node_paths=PackedStringArray("state_machine")]
layout_mode = 0
offset_left = 7.0
offset_top = 24.0
offset_right = 89.0
offset_bottom = 44.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 10
text = "text"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_m1vsv")
state_machine = NodePath("../../GroundStateMachine")

[node name="Timer" type="Timer" parent="Control"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="SFX" type="Node2D" parent="."]

[node name="player_death" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_u1b4q")

[node name="player_mob_jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("2_6fy74")

[node name="player_walk" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_gdg2d")

[node name="player_jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_laasd")

[node name="player_hurt" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("17_e6ydq")

[connection signal="animation_finished" from="PlayerAnimationTree" to="." method="_on_player_animation_tree_animation_finished"]
[connection signal="animation_started" from="PlayerAnimationTree" to="." method="_on_player_animation_tree_animation_started"]
[connection signal="area_entered" from="MobJumpCollision" to="." method="_on_mob_jump_collision_area_entered"]
[connection signal="body_entered" from="MobJumpCollision" to="." method="_on_mob_jump_collision_body_entered"]
[connection signal="timeout" from="Control/Timer" to="Control" method="_on_timer_timeout"]
